# league-replay-studio

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  LICENSE  README.md  build-native.bat  cleanup.bat  count_divs.mjs  count_divs2.mjs  count_divs3.mjs  count_orig.mjs  count_regions.mjs  count_total.mjs  highlight_plan_v2.md  lrs-cleanup.ps1  lrs.bat  orig_ap.jsx  pyproject.toml  start-quick.bat  start.bat  start.sh  trace_region.mjs
backend/: app.py  cli.py  explore_telemetry.py  requirements.txt  seed_demo_data.py  version.py
backend/native_capture/: CMakeLists.txt  capture_dxgi.cpp  capture_dxgi.h  capture_wgc.cpp  capture_wgc.h  frame_buffer.h  ipc_server.cpp  ipc_server.h  main.cpp
backend/server/: __init__.py  config.py  events.py
backend/server/routes/: __init__.py  api_llm.py  (+19 more)
backend/tests/: test_career_stats.py
documentation/: AUDIT_IMPROVEMENTS.md  iracing-replay-director-vs-lrs-analysis.md  master-plan.md  roadmap.md  telemetry-analysis-report.md  unified-selection-pipeline.md
documentation/agent_docs/: README.md  agent-doc.md  api-conventions-guide.md  component-usage-guide.md  context-system-guide.md  hooks-guide.md  logging-and-debugging-guide.md  riper-5.md  settings-system-guide.md  testing-guidelines.md  ui-conventions.md
documentation/screenshots/: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css
tests/backend/: test_scoring_engine.py  test_script_capture.py  test_script_state_service.py
tests/frontend/: test_highlight_scoring.test.js
(+192 files in other folders)
